Prueba version nueva 2

--- a/Loan Calculator/Beginning/task.html
+++ b/Loan Calculator/Beginning/task.html
@@ -4,7 +4,7 @@
 
 <p>Not familiar with these concepts? Don't worry, we will explain them to you in simple terms. The principal is the original amount of money you borrow. The interest is a charge for borrowing that money, usually calculated as a percentage of the principal amount.</p>
 
-<h2 style="text-align: center;">Objective</h2>
+<h2 style="text-align: center;">Objectives</h2>
 
 <p>Let's start by imitating this behavior. There are some prepared variables in the source code: these are text messages that our loan calculator can output. In this stage, all you need to do is output them in the right order.</p>
 
